# gps-annotation

./: .gitignore  README.md  makefile  pyproject.toml
src/: cap_config.yaml  main.py
src/model/: CAP.py
