[tool.poetry]
name = "cap"
version = "0.1.0"
description = ""
authors = ["Ryo Shirai <ryo.shirai@linecorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
isort = "5.0.0"
flake8 = "3.8.0"
black = "^23.3.0"
mypy = "^1.3.0"
numpy = "1.18.5"
scipy = "1.6.0"
pandas = "1.0.5"
hydra = "^2.5"
hydra-core = "^1.3.2"
scikit-learn = "0.24.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
